--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /*reset*/
 * {
-  /*  margin: 0;
+    margin: 0;
     padding: 0;
-    box-sizing: border-box;*/
+    box-sizing: border-box;
 }
 
 /*Estilos del body*/
