--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,21 @@ body {
     background-size: cover;
 }
 
+.containerPrincipal{
+    
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 0.5fr 0.5fr 3fr 0.5fr;
+    grid-template-areas: "header header header header"
+                         "nav nav nav nav"
+                         "main main main main"
+                         "footer footer footer footer";
+}
 /* estilos del titulo principal */
 .headerInit {
     margin: 1rem;
     padding: 1rem;
+    grid-area: header;
 }
 
 a {
@@ -79,6 +90,7 @@ a {
     background: linear-gradient(0deg, #42C2FF, #94bbe9);
     border-radius: 1rem;
     margin: 1rem;
+    grid-area: nav;
 }
 
 .navbar-nav.navbar-center {
@@ -128,8 +140,10 @@ a {
 /*******************************************/
 /*Pagina Inicio */
 .mainInit {
+    grid-area: main;
     display: grid;
-    padding: 0.2rem;
+    background-color: black;
+    margin: 1rem;
     grid-template-areas: "mainInitVideo "
         "mainInitP";
     justify-content: center;
@@ -145,12 +159,13 @@ a {
 .mainInitVideo {
     grid-area: mainInitVideo;
     width: 100%;
-    margin: 10px;
+
 }
 
 /*******************************************/
 /*Pagina Servicios Main*/
 .mainServices {
+    grid-area: main;
     padding: 1rem;
     display: grid;
     grid-template-areas: "eventKids"
@@ -189,6 +204,7 @@ a {
 /*EPagina Sobre Nosotros*/
 /*Pagina Inicio */
 .mainAboutUs {
+    grid-area: main;
     display: grid;
     padding: 0.2rem;
     grid-template-areas: "mainAboutUsH2"
@@ -221,7 +237,9 @@ a {
 
 /***********************************************************/
 /*Pagina Galeria Main*/
+/**/
 .mainGallery {
+    grid-area: main;
     padding: 1rem;
     display: grid;
     grid-template-areas: "imagen1"
@@ -292,6 +310,7 @@ a {
 /*Pagina Contacto*/
 /*Formulario*/
 .mainContact {
+    grid-area: main;
     display: flex;
     align-content: center;
     justify-content: center;
@@ -315,7 +334,7 @@ table {
 /***********************************************************/
 /*Pagina Reviews*/
 .mainReviews {
-
+    grid-area: main;
     text-align: center;
 }
 
@@ -341,6 +360,7 @@ table {
 /**********************************************************/
 /*Estilos footer*/
 .footerInit {
+    grid-area: footer;
     margin-bottom: 1rem;
     margin: 1rem;
     padding: 1rem;
