--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 .containerPrincipal{
     display: grid;
     height: 100vh;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
     grid-template-rows: 0.5fr 0.5fr 3fr 0.5fr;
     grid-template-areas: "header header header header"
                          "nav nav nav nav"
@@ -89,10 +89,11 @@ a {
 /*MENU de todas las paginas*/
 .menu {
     /*background: #42C2FF;*/
+    grid-area: nav;
     background: linear-gradient(0deg, #42C2FF, #94bbe9);
     border-radius: 1rem;
     margin: 1rem;
-    grid-area: nav;
+    
 }
 
 .navbar-nav.navbar-center {
@@ -103,9 +104,7 @@ a {
 
 .menu ul {
     display: flex;
-    /*justify-content: space-around;*/
     list-style-type: none;
-    /*text-align: center;*/
 }
 
 .menu ul li {
@@ -117,7 +116,6 @@ a {
 }
 
 .menu ul li:hover {
-    /*background-color: #5c4431;*/
     color: whitesmoke;
     font-weight: bold;
 }
@@ -159,7 +157,8 @@ a {
 
 .mainInitVideo {
     grid-area: mainInitVideo;
-    width: 100%;
+    width: 40vh;
+    height: 40vh;
 
 }
 
@@ -419,9 +418,9 @@ a {
     .mainAboutUs {
         display: grid;
         padding: 0.2rem;
-        grid-template-areas: "mainAboutUsH2 mainAboutUsH2"
-            "mainAboutUsImage mainAboutUsP"
-            "mainAboutUsImage mainAboutUsP";
+        grid-template-areas: "mainAboutUsH2 mainAboutUsH2 mainAboutUsH2"
+            "mainAboutUsImage mainAboutUsImage mainAboutUsP"
+            "mainAboutUsImage mainAboutUsImage mainAboutUsP";
 
         justify-content: center;
         justify-items: center;
