--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -14,8 +14,8 @@ $linearGradientMenu:0deg;
 //Footer
 $linearGradientFooter:180deg;
 
-//Titulos
-$fuenteTitulos: 'Comforter', cursive;
+//Body
+$fuentePagina: 'Tahoma';
 $tamanoTitulos: 2rem;
 
 //Fomrulario
@@ -23,3 +23,8 @@ $formFontSize: large;
 
 //Container
 $containerHeight: 100vh;
+
+//Reviews
+$sizeFontReviews:20px;
+$sizeFontReviewsP:20px;
+$sizeFontReviewsLi:15px;
