--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -20,7 +20,8 @@ a {
 }
 
 body {
-    background-image: url('../img/background-2.png');
+    background-image: url('../img/background2.png');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover contain;
+    font-family: $fuentePagina;
 }
