--- a/css/main.css
+++ b/css/main.css
@@ -331,5 +331,6 @@ a {
 body {
   background-image: url("../img/background2.png");
   background-repeat: no-repeat;
-  background-size: cover contain;
+  background-size: cover;
+  background-repeat: repeat;
   font-family: "Tahoma"; }
