Entrega SEO y SAS

--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,18 @@
   margin: 0;
   box-sizing: border-box; }
 
+/*@mixin flex ($flex, $direction, $content, $margin) {
+    
+    display: $flex;
+    flex-direction: $direction;
+    justify-content: $content;
+    margin-bottom: $margin;
+}*/
 .containerPrincipal {
   display: grid;
   height: 100vh;
-  grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
+  margin: 0.1rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 0.5fr 0.5fr 3fr 0.5fr;
   grid-template-areas: "header header header header" "nav nav nav nav" "main main main main" "footer footer footer footer"; }
 
@@ -89,7 +97,7 @@
       display: none;
       position: absolute; }
 
-.navbar-nav.navbar-center {
+.navbar-nav .navbar-center {
   position: absolute;
   left: 50%;
   transform: translatex(-50%); }
@@ -106,6 +114,7 @@
   grid-area: main;
   display: grid;
   margin: 1rem;
+  padding: 1rem;
   grid-template-areas: "mainInitVideo " "mainInitP";
   justify-content: center;
   justify-items: center; }
@@ -124,16 +133,30 @@
 /*Pagina Servicios Main*/
 .mainServices {
   grid-area: main;
-  padding: 1rem;
   display: grid;
+  margin: 1rem;
+  padding: 1rem;
   grid-template-areas: "eventKids eventKids" "eventCorporative eventCorporative" "eventCattering eventCattering";
   justify-content: center;
-  justify-items: center;
-  gap: 0.5rem; }
+  justify-items: center; }
+
+.eventKids {
+  grid-area: eventKids;
+  margin: 0.1rem;
+  padding: 0.1rem; }
+
+.eventCorporative {
+  grid-area: eventCorporative;
+  margin: 0.1rem;
+  padding: 0.1rem; }
+
+.eventCattering {
+  grid-area: eventCattering;
+  margin: 0.1rem;
+  padding: 0.1rem; }
 
 .eventName {
-  text-align: center;
-  font: bolder; }
+  text-align: center; }
 
 .eventImage {
   width: 100%;
@@ -141,21 +164,13 @@
   padding: 0.5rem;
   border-radius: 2rem; }
 
-.eventKids {
-  grid-area: eventKids; }
-
-.eventCorporative {
-  grid-area: eventCorporative; }
-
-.eventCattering {
-  grid-area: eventCattering; }
-
 /************************************************************/
 /*EPagina Sobre Nosotros*/
 /*Pagina Inicio */
 .mainAboutUs {
   grid-area: main;
   display: grid;
+  margin: 0.2rem;
   padding: 0.2rem;
   grid-template-areas: "mainAboutUsH2" "mainAboutUsImage" "mainAboutUsP";
   justify-content: center;
@@ -163,37 +178,43 @@
 
 .mainAboutUsImage {
   grid-area: mainAboutUsImage;
-  width: 100%;
-  margin: 0.2rem;
-  padding: 0.2rem;
+  margin: 1rem;
+  padding: 1rem;
+  width: auto;
   border-radius: 2rem; }
 
 .mainAboutUsH2 {
   grid-area: mainAboutUsH2;
+  margin: 0.5rem;
+  padding: 0.5rem;
   font-size: 25px;
   text-align: center; }
 
 .mainAboutUsP {
   grid-area: mainAboutUsP;
-  text-align: center;
-  font-size: 1rem;
-  margin-top: 10px; }
+  margin: 0.5rem;
+  padding: 0.5rem;
+  text-align: center; }
 
 /***********************************************************/
 /*Pagina Galeria Main*/
 /**/
 .mainGalleryCarousel {
   grid-area: main;
-  margin: 1.2rem; }
+  margin: 1.2rem;
+  padding: 0.5rem; }
 
 .mainGallery {
   grid-area: main;
+  display: none;
   margin: 1.2rem;
-  display: inline-block;
-  align-items: center;
-  grid-template-areas: "imagen1" "imagen2" "imagen3" "imagen4";
-  gap: 0.2rem;
-  display: none; }
+  padding: 0.5rem;
+  /*    align-items: center;
+    grid-template-areas: "imagen1"
+        "imagen2"
+        "imagen3"
+        "imagen4";
+    gap: 0.2rem;*/ }
 
 .item1 {
   width: 100%;
@@ -281,22 +302,29 @@
 /*MEDIA QUERY*/
 @media screen and (min-width: 720px) {
   .mainAboutUs {
+    grid-area: main;
     display: grid;
-    padding: 0.2rem;
+    margin: 0.5rem;
+    padding: 0.5rem;
     grid-template-areas: "mainAboutUsH2 mainAboutUsH2" "mainAboutUsImage mainAboutUsP" "mainAboutUsImage mainAboutUsP";
     justify-content: center;
     justify-items: center; }
   .mainServices {
-    padding: 1rem;
+    grid-area: main;
     display: grid;
+    margin: 0.5rem;
+    padding: 0.5rem;
     grid-template-areas: "eventKids eventCattering" "eventCorporative eventCattering";
     justify-content: center;
     justify-items: center;
     align-items: center;
-    gap: 0.2rem; }
+    gap: 0.5rem; }
   .mainGallery {
-    padding: 1rem;
+    grid-area: main;
     display: grid;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    align-items: center;
     grid-template-areas: "imagen1 imagen2" "imagen3 imagen4";
     gap: 0.2rem; }
   .mainGalleryCarousel {
@@ -304,17 +332,22 @@
 
 @media screen and (min-width: 1360px) {
   .mainAboutUs {
+    grid-area: main;
     display: grid;
-    padding: 0.2rem;
+    margin: 1rem;
+    padding: 1rem;
     grid-template-areas: "mainAboutUsH2 mainAboutUsH2 mainAboutUsH2" "mainAboutUsImage mainAboutUsImage mainAboutUsP" "mainAboutUsImage mainAboutUsImage mainAboutUsP";
     justify-content: center;
     justify-items: center; }
   .mainServices {
-    padding: 1rem;
+    grid-area: main;
     display: grid;
+    padding: 1rem;
+    margin: 1rem;
     grid-template-areas: "eventKids eventCorporative eventCattering";
     justify-content: center;
     justify-items: center;
+    align-items: center;
     gap: 0.2rem; }
   .mainGallery {
     padding: 1rem;
