--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,6 +5,7 @@
 }
 
 @import "base/variables";
+@import "base/mixins";
 @import "container";
 @import "components/header";
 @import "components/footer";
