--- a/scss/base/_map.scss
+++ b/scss/base/_map.scss
@@ -1,4 +1,11 @@
-$estilos: (
-    bg: red,
-    ancho: 40%
-)
+$colorLogo: (/*Declaracion de mapa*/
+    principal: #6AA84F,
+    secundario: #4AF873
+);
+
+$colorMenu: (/*Declaracion de mapa*/
+    principal: #42C2FF,
+    secundario: #94bbe9,
+    fuente: whitesmoke,
+    submenu: #42C2FF
+);
