--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -1,7 +1,7 @@
 .containerPrincipal {
-    @include grid-set (grid,0,0.1rem, 0.1rem);
     display: grid;
     height: $containerHeight;
+    margin:0.1rem;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 0.5fr 0.5fr 3fr 0.5fr;
     grid-template-areas:    "header header header header"
