--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2,21 +2,22 @@
 /*Pagina Inicio */
 .mainInit {
     @include grid-set (main,grid,1rem, 1rem);
-    grid-template-areas: "mainInitVideo "
+    grid-template-areas: "mainInitVideo"
         "mainInitP";
+    align-content: center;
     justify-content: center;
     justify-items: center;
 }
 
 .mainInitP {
-    @include grid-set (mainInitP,0,1rem, 1rem);
+    @include grid-set (mainInitP,0,0.2rem, 0.2rem);
     text-align: center;
     font-size: 1rem;
 }
 
 .mainInitVideo {
-    @include grid-set (mainInitVideo,grid,1rem, 1rem);
-    width: 40vh;
+    @include grid-set (mainInitVideo,0,0.2rem, 0.2rem);
+    width: 100%;
     height: 40vh;
 }
 
@@ -156,12 +157,10 @@
     align-content: center;
     justify-content: center;
     margin: 1rem;
-
     h2 {
         font-size: $sizeFontReviews;
         text-align: center;
     }
-
     ul {
         li {
             list-style-type: none;
@@ -176,3 +175,4 @@
         }
     }
 }
+
