--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,6 +6,7 @@
 
 @import "base/variables";
 @import "base/mixins";
+@import "base/map";
 @import "container";
 @import "components/header";
 @import "components/footer";
